add API for setting completed todo items
